chore: publish neoforge fork